<resources>
    <string name="app_name">Do It</string>

    <string name="done_string">Complete</string>
    <string name="priority_string">Priority:</string>
    <string name="date_string">Date:</string>
    <string name="add_new_todo_item_string">Add Task</string>
    <string name="title_string">Task</string>
    <string name="description_string">Description</string>
    <string name="status_string">Status</string>
    <string name="not_done_string">Not Done</string>
    <string name="priority_low_string">Low</string>
    <string name="priority_medium_string">Medium</string>
    <string name="priority_high_string">High</string>
    <string name="time_and_date_string">Deadline</string>
    <string name="no_date_set_string">0000&#8211;00&#8211;00</string>
    <string name="no_time_set_string">00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>
    <string name="enter_title_string">Enter Task</string>
    <string name="enter_description_string">Enter Description</string>
    <string name="alarm_me_string">Alarm Me</string>
    <string name="complete_string">Complete</string>
    <string name="alarm_hint">Alert incomplete task near deadline time</string>
    <string name="inactive_string">Inactive</string>
    <string name="inactive_hint">Task become inactive</string>
    <string name="ok_string">OK</string>
    <string name="delete_string">Delete</string>
    <string name="delete_completed_tasks">Delete completed tasks</string>
    <string name="action_settings">No</string>
    <string name="motivate_me">Get motivation</string>
    <string name="clear_all_tasks">Delete all tasks</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="dialog_message_delete_complete_tasks">Do you really want to delete completed
        tasks?</string>
    <string name="dialog_message_delete_all_tasks">Do you really want to delete all tasks?</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="action_search">Search...</string>
    <string name="app_ad_id">ca-app-pub-8860146573198389~9487504606</string>
    <string name="banner_ad_unit_id">ca-app-pub-8860146573198389/3350359715</string>

</resources>
