<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <!--Get motivation-->
    <item
        android:id="@+id/motivate_me"
        android:title="@string/motivate_me"
        app:showAsAction="never"/>

    <!--Delete completed tasks-->
    <item
        android:id="@+id/delete_completed_tasks"
        android:title="@string/delete_completed_tasks"
        app:showAsAction="never"/>

    <!--Clear all tasks-->
    <item android:id="@+id/clear_all_tasks"
        android:title="@string/clear_all_tasks"
        app:showAsAction="never"/>

</menu>