<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/view_edit_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_edit_todo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_edit_todo"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">


    <!-- Title -->
        <TextView
            android:id="@+id/TitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/label_size"
            android:text="@string/title_string"
            android:layout_alignParentTop="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title_string"
            android:text=""
            android:inputType="textShortMessage"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/TitleLabel"/>
        <requestFocus />

    <!-- Description -->
    <TextView
        android:id="@+id/DescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:textSize= "@dimen/label_size"
        android:text="@string/description_string"
        android:layout_below="@+id/title">
    </TextView>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress|textMultiLine"
        android:singleLine="false"
        android:lines="10"
        android:minLines="3"
        android:scrollbars="vertical"
        android:hint="@string/enter_description_string"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/DescriptionLabel">
    </EditText>

    <!--Deadline time-->
    <!-- Time and Date -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_and_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/time_and_date_string"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerVertical="true"
            android:layout_below="@+id/description"/>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:text="@string/no_date_set_string"
                android:layout_alignBaseline="@+id/time_and_date"
                android:layout_alignEnd="@+id/date_picker" />

            <Button
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_date_string"
                android:layout_below="@+id/date"
                android:layout_toStartOf="@+id/time_picker"
                style="@style/AppTheme.AppBarOverlay" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:textSize="20dp"
                android:text="@string/no_time_set_string"
                android:layout_alignBaseline="@+id/time_and_date"
                android:layout_alignEnd="@+id/time_picker" />
            <Button
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/date_picker"
                android:layout_below="@id/time"
                android:text="@string/choose_time_string" />
        </LinearLayout>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alarm_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/time_and_date"
                android:layout_below="@+id/date_picker"

                android:text="@string/alarm_me_string"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent" />

            <CheckBox
                android:id="@+id/alarmCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/alarm_me"
                android:layout_toEndOf="@+id/DescriptionLabel"
                android:hint="@string/alarm_hint"
                android:textColor="@color/colorPrimaryDark"></CheckBox>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/alarm_me"
                android:layout_below="@+id/alarm_me"
                android:text="@string/complete_string"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent" />

            <CheckBox
                android:id="@+id/completeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/complete"
                android:layout_alignStart="@+id/alarmCheckBox"
                android:layout_toEndOf="@+id/DescriptionLabel"
                android:textColor="@color/colorPrimaryDark"></CheckBox>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_string"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_alignTop="@+id/deleteButton" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_string"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_alignBottom="@+id/submitButton"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_string"

                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="33dp"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>

<!--<RelativeLayout-->
<!--android:orientation="vertical"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--android:paddingTop="@dimen/activity_vertical_margin"-->
<!--android:layout_below="@+id/view">-->


<!--&lt;!&ndash; Title &ndash;&gt;-->
<!--<TextView-->
    <!--android:id="@+id/TitleLabel"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:textSize="@dimen/label_size"-->
    <!--android:text="@string/title_string"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:focusableInTouchMode="true" />-->

<!--<EditText-->
    <!--android:id="@+id/title"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/enter_title_string"-->
    <!--android:text=""-->
    <!--android:inputType="textShortMessage"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:layout_below="@+id/TitleLabel">-->
    <!--<requestFocus />-->
<!--</EditText>-->

<!--&lt;!&ndash; Description &ndash;&gt;-->
<!--<TextView-->
    <!--android:id="@+id/DescriptionLabel"-->

    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:textSize= "@dimen/label_size"-->
    <!--android:text="@string/description_string"-->
    <!--android:layout_below="@+id/title"-->
    <!--android:layout_alignParentStart="true">-->
<!--</TextView>-->

<!--<EditText-->
    <!--android:id="@+id/description"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="textEmailAddress|textMultiLine"-->
    <!--android:singleLine="false"-->
    <!--android:lines="10"-->
    <!--android:minLines="3"-->
    <!--android:scrollbars="vertical"-->
    <!--android:hint="@string/enter_description_string"-->
    <!--android:text=""-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:layout_below="@+id/DescriptionLabel">-->
<!--</EditText>-->

<!--&lt;!&ndash;Deadline time&ndash;&gt;-->
<!--&lt;!&ndash; Time and Date &ndash;&gt;-->

<!--<TextView-->
    <!--android:id="@+id/time_and_date"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:text="@string/time_and_date_string"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_below="@+id/description"-->
    <!--android:layout_alignStart="@+id/description" />-->

<!--<TextView-->
    <!--android:id="@+id/date"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:textSize="20dp"-->
    <!--android:text="@string/no_date_set_string"-->
    <!--android:layout_alignBaseline="@+id/time_and_date"-->
    <!--android:layout_alignEnd="@+id/date_picker" />-->

<!--<TextView-->
    <!--android:id="@+id/time"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:textSize="20dp"-->
    <!--android:text="@string/no_time_set_string"-->
    <!--android:layout_alignBaseline="@+id/time_and_date"-->
    <!--android:layout_alignEnd="@+id/time_picker" />-->

<!--<Button-->
    <!--android:id="@+id/date_picker"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/choose_date_string"-->
    <!--android:layout_below="@+id/date"-->
    <!--android:layout_toStartOf="@+id/time_picker"-->
    <!--style="@style/AppTheme.AppBarOverlay" />-->

<!--<Button-->
    <!--android:id="@+id/time_picker"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_alignTop="@id/date_picker"-->
    <!--android:layout_below="@id/time"-->
    <!--android:text="@string/choose_time_string" />-->

<!--<TextView-->
    <!--android:id="@+id/alarm_me"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:text="@string/alarm_me_string"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:layout_below="@+id/date_picker"-->
    <!--android:layout_alignStart="@+id/time_and_date"-->
    <!--android:layout_marginTop="15dp" />-->

<!--<CheckBox-->
    <!--android:id="@+id/alarmCheckBox"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColor="@color/colorPrimaryDark"-->
    <!--android:layout_alignBottom="@+id/alarm_me"-->
    <!--android:layout_toEndOf="@+id/DescriptionLabel"-->
    <!--android:hint="@string/alarm_hint">-->
<!--</CheckBox>-->

<!--<TextView-->
    <!--android:id="@+id/complete"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:text="@string/complete_string"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:layout_below="@+id/alarm_me"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:layout_alignEnd="@+id/alarm_me"-->
    <!--android:layout_alignStart="@+id/alarm_me"/>-->

<!--<CheckBox-->
    <!--android:id="@+id/completeCheckBox"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColor="@color/colorPrimaryDark"-->
    <!--android:layout_alignBottom="@+id/complete"-->
    <!--android:layout_toEndOf="@+id/DescriptionLabel"-->
    <!--android:layout_alignStart="@+id/alarmCheckBox">-->
<!--</CheckBox>-->


<!--<Button-->
    <!--android:id="@+id/cancelButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/cancel_string"-->
    <!--android:layout_marginLeft="0dp"-->
    <!--android:layout_marginRight="0dp"-->
    <!--android:layout_alignTop="@+id/deleteButton"-->
    <!--android:layout_alignEnd="@+id/complete" />-->

<!--<Button-->
    <!--android:id="@+id/deleteButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/delete_string"-->
    <!--android:layout_marginLeft="0dp"-->
    <!--android:layout_marginRight="0dp"-->
    <!--android:layout_alignBottom="@+id/submitButton"-->
    <!--android:layout_centerHorizontal="true" />-->


<!--<Button-->
    <!--android:id="@+id/submitButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/ok_string"-->

    <!--android:layout_marginLeft="0dp"-->
    <!--android:layout_marginRight="0dp"-->
    <!--android:layout_marginTop="33dp"-->
    <!--android:layout_below="@+id/completeCheckBox"-->
    <!--android:layout_alignParentEnd="true" />-->

<!--</RelativeLayout>-->